<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.transaction.TransactionListActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loadings" />

        <TextView
            android:id="@+id/logOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_medium"
            android:text="@string/logout"
            android:textColor="@color/black"
            android:textSize="@dimen/hight_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_high"
            android:layout_marginEnd="@dimen/size_high"
            android:background="@drawable/bg_balance"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logOut">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_small"
                android:layout_marginTop="@dimen/size_small"
                android:text="@string/you_have"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_small"
                android:textColor="@color/black"
                android:textSize="@dimen/hight_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_small"
                android:layout_marginTop="@dimen/size_small"
                android:text="@string/account_no" />

            <TextView
                android:id="@+id/account_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_small"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_small"
                android:layout_marginTop="@dimen/size_small"
                android:text="@string/account_holder" />

            <TextView
                android:id="@+id/account_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_small"
                android:layout_marginBottom="@dimen/size_small"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text_size"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/title_history_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_medium"
            android:layout_marginTop="@dimen/size_medium"
            android:text="@string/your_transaction_history"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/balance" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_transactions"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/size_small"
            app:layout_constraintBottom_toTopOf="@id/make_transfer_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_history_transaction" />

        <com.startup.simpleapps.utils.LoadingButton
            android:id="@+id/make_transfer_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_medium"
            android:text="@string/make_transfer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>