<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.transfer.TransferActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_very_small"
        android:layout_marginTop="@dimen/size_small"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_transfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_medium"
        android:layout_marginTop="@dimen/size_head"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/transfer"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/head_text_high"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_high"
        app:cardCornerRadius="@dimen/size_small"
        app:cardElevation="@dimen/size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_transfer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_medium"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/size_small"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/payees_txt"
                    android:text="@string/payees"
                    android:textStyle="bold"
                    android:textSize="@dimen/medium_text_size"
                    android:textColor="@color/black"
                    android:layout_marginEnd="@dimen/size_very_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Spinner
                    android:id="@+id/payees"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amount_TL"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/size_small"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                app:boxBackgroundColor="@null"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/amount"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/desc_TL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                app:boxBackgroundColor="@null"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.startup.simpleapps.utils.LoadingButton
        android:id="@+id/transfer_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_medium"
        android:text="@string/transfer_now"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>